fixed spacing issue, grid

--- a/Figma-presentation-bridge/CSS/style.css
+++ b/Figma-presentation-bridge/CSS/style.css
@@ -8,7 +8,7 @@ body{
 .parent {
     display: grid;
     grid-template-columns: 0.8fr repeat(3, 1fr) 0.8fr;
-    grid-template-rows: 1fr 0.3fr repeat(3, 1fr) repeat(2, 0.3fr);
+    grid-template-rows: 0.2fr 0.3fr repeat(3, 1fr) repeat(2, 0.3fr);
     grid-column-gap: 0px;
     grid-row-gap: 1rem;
     }
